# EC03_UrbanHub

./: docker-compose.yml  sonar-project.properties
.github/workflows/: ci_alerte.yml  ci_auth.yml  ms-collecte-iot.md
ms-alerte/alerte/: docker-compose.yml  dockerfile  pyproject.toml
ms-alerte/alerte/src/alerte/database/: init_alerts.py
ms-auth/: Dockerfile  Dockerfile.test  docker-compose.yml  readme_auth.md  sonar-project.properties
ms-auth/authentification/: .coveragerc  main.py  pyproject.toml  sonar-project.properties
ms-auth/authentification/database/: db_auth.sql
ms-auth/authentification/src/authentification/: __init__.py  config.py
ms-auth/authentification/src/authentification/controllers/: __init__.py  auth_controller.py
ms-auth/authentification/src/authentification/domains/: __init__.py  login.py  user_role.py
ms-auth/authentification/src/authentification/dtos/: __init__.py  login_dto.py  token_dto.py
ms-auth/authentification/src/authentification/repositories/: __init__.py  database.py  models.py  token_repository.py  user_repository.py
ms-auth/authentification/src/authentification/security/: __init__.py  jwt_service.py  password_hasher.py
ms-auth/authentification/tests/: conftest.py
ms-auth/authentification/tests/integration/: test_auth_login.py
ms-auth/authentification/tests/unit/: test_jwt_service.py  test_login_domain.py  test_password_hasher.py
ms-collecte-iot/: .env.example  .flake8  .gitignore  Dockerfile  Dockerfile.test  docker-compose.yml  pyproject.toml  readme_collecte_iot.md  requirements-dev.txt  requirements.txt
ms-collecte-iot/app/: config.py  main.py
ms-collecte-iot/app/controllers/: sensor_controller.py
ms-collecte-iot/app/database/: mongo_client.py
ms-collecte-iot/app/domains/: aggregation_domain.py  mapper.py  normalization_domain.py  sensor_entity.py  validation_domain.py
ms-collecte-iot/app/dtos/: event_output_dto.py  inductiveloop_input_dto.py  radar_input_dto.py  smartcamera_input_dto.py
ms-collecte-iot/app/kafka/: producer.py
ms-collecte-iot/app/repositories/: sensor_repository.py
ms-collecte-iot/app/security/: api_key_service.py
ms-collecte-iot/config/: api_keys.json
ms-collecte-iot/tests/: conftest.py  test_integration.py  test_unit.py
ms-collecte-iot/tests/integration/: test_sensor_controller.py
ms-collecte-iot/tests/unit/: test_aggregation_domain.py  test_api_key_service.py  test_event_output_dto.py  test_kafka_producer.py  test_mapper.py  test_mongo_client.py  test_normalization_domain.py  test_sensor_repository.py  test_validation_domain.py
ms-user/: .gitignore  Dockerfile  Dockerfile.test  docker-compose.yml  pyproject.toml
ms-user/src/: main.py
ms-user/src/core/: config.py  security.py
ms-user/src/ms_user/domain/: log.py  role.py  user.py
ms-user/src/ms_user/dto/: user_dto.py
ms-user/src/ms_user/endpoints/: user_routes.py
ms-user/src/ms_user/repositories/: user_repository.py
ms-user/src/ms_user/services/: log_service.py  user_service.py
ms-user/tests/integration/: test_user_routes.py
ms-user/tests/unit/: test_log.py  test_rbac.py  test_role.py  test_user.py  test_user_dto.py  test_user_repository.py  test_user_service.py
