[project]
name = "alerte"
version = "0.1.0"
description = ""
authors = [
    {name = "christinaRas",email = "rasu.christina@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests (>=2.33.1,<3.0.0)",
    "fastapi (>=0.136.0,<0.137.0)",
    "uvicorn (>=0.44.0,<0.45.0)"
]

[tool.poetry]
packages = [{include = "alerte", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
